added templates for password change

--- a/templates/main/index-mainpage.html
+++ b/templates/main/index-mainpage.html
@@ -17,7 +17,7 @@
 
 <div>
 <img src="{% static 'images/stock.jpg' %}" alt="User Photo" /> 
-	<button>Logout</button>
+	<button><a href="{% url 'auth_logout' %}">Logout</a></button>
 </div>
 
 
