--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -4,12 +4,11 @@
 <html>
     <head>
         <title>
-            Logout
+            Change password sucessful
         </title>
     </head>
     <body>
-        <h1>Logged Out!</h1> 
-        <p>You have successfully logged out.</p>
+        <h1>Password changed sucessfully!</h1> 
         <a href="{% url 'main:index' %}">Return to index</a>
     </body>
 </html>
