--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -10,5 +10,7 @@
     <body>
         <h1>User Profile</h1> 
             {{ user.username }}
+            {{ user.id }}
+            {{ user.email }}
     </body>
 </html>
