Added index link to profile page

--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -12,5 +12,7 @@
             {{ user.username }}
             {{ user.id }}
             {{ user.email }}
+            <br />
+            <a href="{% url 'main:index' %}">Return to index</a>
     </body>
 </html>
