--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -8,7 +8,7 @@
         </title>
     </head>
     <body>
-        <h1>{{ user.username }}'s' Profile</h1> 
+        <h1>{{ user.username }}'s Profile</h1> 
             {{ user.username }}
             {{ user.id }}
             {{ user.email }}
@@ -16,5 +16,14 @@
            
             <br />
             <a href="{% url 'main:index' %}">Return to index</a>
+
+
+
+            <form method="POST" action="">
+                {% csrf_token %}
+                {{ user_form.as_p }}
+                {{ profile_form.as_p }}
+                <input type="submit" value="Update">
+            </form>
     </body>
 </html>
