--- a/templates/main/update_user.html
+++ b/templates/main/update_user.html
@@ -9,21 +9,12 @@
     </head>
     <body>
         <h1>{{ user.username }}'s Profile</h1> 
-            {{ user.username }}
-            {{ user.id }}
-            {{ user.email }}
-           <img src="/static/images/{{ user.profile.picture }}" alt=""/> 
-           
-            <br />
-            <a href="{% url 'main:index' %}">Return to index</a>
-
-
-
-            <form method="POST" action="">
+            <form method="post" action="{% url 'main:update_user' %}">
                 {% csrf_token %}
                 {{ user_form.as_p }}
                 {{ profile_form.as_p }}
                 <input type="submit" value="Update">
             </form>
+            <a href="{% url 'main:index' %}">Return to index</a>
     </body>
 </html>
