added a few links to the registration templates

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,6 +18,6 @@
             <input type="hidden" name="next" value="{{ next }}">
         </form>   
 
-        <p>Not registered? <a href="{% url 'registration_register' %}"></a></p>
+        <p>Not registered? <a href="{% url 'registration_register' %}">Register Here!</a></p>
     </body>
 </html>
