--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -16,6 +16,7 @@
 
             <input type="submit" value="Register">
 
-        </form>   
+        </form>  
+        <a href="{% url 'main:index' %}">Return to index</a> 
     </body>
 </html>
