User profile stuff and queries for posts

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -14,9 +14,9 @@
 
             {{ form.as_p }}
 
-            <input type="submit" value="Log In">
+            <input type="submit" value="Update Password">
 
         </form>   
-
+        <a href="{% url 'main:index' %}" class="btn btn-primary">Return to index</a>
     </body>
 </html>
