added header to my templates

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -30,7 +30,7 @@
                     <div class="col-lg-6 col-sm-6 col-4 header-top-left">
                     </div>
                     <div class="col-lg-6 col-sm-6 col-8 header-top-right">
-                        <a href="#" class="text-uppercase">Login</a>
+                        <a href="{% url 'auth_login' %}" class="text-uppercase">Login</a>
                     </div>
                 </div>
             </div>
