--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -30,7 +30,12 @@
                     <div class="col-lg-6 col-sm-6 col-4 header-top-left">
                     </div>
                     <div class="col-lg-6 col-sm-6 col-8 header-top-right">
-                        <a href="{% url 'auth_login' %}" class="text-uppercase">Login</a>
+						{% if user.is_authenticated %}
+						<a href="{% url 'main:profile' %}">Welcome, {{ user.username }}</a>
+						<a href="{% url 'auth_logout' %}" class="text-uppercase">Logout</a>
+						{% else %}
+						<a href="{% url 'auth_login' %}" class="text-uppercase">Login</a>
+						{% endif %}
                     </div>
                 </div>
             </div>
@@ -39,7 +44,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="/"><img src="{% static 'images/question.png' %}" alt=""></a>
+                    <a class="navbar-brand logo_h" href="{% url 'main:index' %} "><img src="{% static 'images/question.png' %}" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
@@ -49,9 +54,9 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
-                            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'main:index' %} ">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
-                            <li class="nav-item submenu dropdown active">
+                            <li class="nav-item submenu dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
                                     aria-haspopup="true" aria-expanded="false">Courses</a>
                              
