--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -74,16 +74,22 @@
           <img src="../media/{{ user.profile.picture }}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{ user.username }}'s Profile</h5>
-            <ul class="list-group">
+            <ul class="list-group list-group-flush">
               <li class="list-group-item">Username: {{ user.username }}</li>
               <li class="list-group-item">Email: {{ user.email }}</li>
             </ul><br />
             <h6>Biography:</h6>
             <p class="card-text">{{ user.profile.bio }}</p>
             <br />
-            <a href="{% url 'main:update_user' %}" class="btn btn-primary">Update profile</a>
-            <a href="{% url 'auth_password_change' %}" class="btn btn-primary">Change password</a>
-            <a href="{% url 'main:index' %}" class="btn btn-primary">Return to index</a>
+            <ul class="list-group">
+              <a href="{% url 'main:update_user' %}"><li class="list-group-item list-group-item-action">Update profile</li></a>
+              <a href="{% url 'auth_password_change' %}" ><li class="list-group-item list-group-item-action">Change password</li></a>
+              <a href="{% url 'main:index' %}"><li class="list-group-item list-group-item-action">Return to index</li></a>
+
+            </ul>
+            
+            
+            
           </div>
         </div>
       </div>
@@ -138,7 +144,7 @@
             {% if replies %}
             {% for reply in replies %}
             <h6 class="card-title">{{reply.question.title}}</h6>
-            <p class="card-text">{{ qreply.reply }}</p>
+            <p class="card-text">{{ reply.reply }}</p>
             {% endfor %}
             {% else %}
             <h6 class="card-title">Recent Replies</h6>
@@ -151,6 +157,19 @@
     </div>
 
   </div>
+  	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+	<script src="{% static 'js/popper.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/stellar.js' %}"></script>
+	<script src="{% static 'js/countdown.js' %}"></script>
+	<script src="{% static 'vendors/nice-select/js/jquery.nice-select.min.js' %}"></script>
+	<script src="{% static 'vendors/owl-carousel/owl.carousel.min.js' %}"></script>
+	<script src="{% static 'js/owl-carousel-thumb.min.js' %}"></script>
+	<script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+	<script src="{% static 'vendors/counter-up/jquery.counterup.js' %}"></script>
+	<script src="{% static 'js/mail-script.js' %}"></script>
 </body>
 
 </html>
