--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -24,59 +24,94 @@
 </head>
 
 <body>
-    	<!--================ Start Header Menu Area =================-->
-        <header class="header_area">
-            <div class="header-top">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6 col-sm-6 col-4 header-top-left">
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-8 header-top-right">
-                            <a href="#" class="text-uppercase">Login</a>
-                        </div>
+    <!--================ Start Header Menu Area =================-->
+    <header class="header_area">
+        <div class="header-top">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 col-sm-6 col-4 header-top-left">
+                    </div>
+                    <div class="col-lg-6 col-sm-6 col-8 header-top-right">
+                        <a href="#" class="text-uppercase">Login</a>
                     </div>
                 </div>
             </div>
-    
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <a class="navbar-brand logo_h" href="/"><img src="{% static 'images/question.png' %}" alt=""></a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                            <ul class="nav navbar-nav menu_nav ml-auto">
-                                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
-                                <li class="nav-item submenu dropdown active">
-                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-                                        aria-haspopup="true" aria-expanded="false">Courses</a>
-                                 
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
+        </div>
+
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <a class="navbar-brand logo_h" href="/"><img src="{% static 'images/question.png' %}" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav menu_nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
+                        <li class="nav-item submenu dropdown active">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+                                aria-haspopup="true" aria-expanded="false">Courses</a>
+
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </header>
-        <!--================ End Header Menu Area =================-->
-    <h1>Login</h1>
-    <form method="post" action=".">
-        {% csrf_token %}
+        </nav>
+        </div>
+    </header>
+    <!--================ End Header Menu Area =================-->
+    <div class="container">
+        <div class="col-sm">
 
-        {{ form.as_p }}
+        </div>
+        <div class="col-sm">
+            <div class="card">
+                <div class="card-header">
+                </div>
+                <div class="card-body">
 
-        <input type="submit" value="Log In">
-        <input type="hidden" name="next" value="{{ next }}">
-    </form>
+                    <h6 class="card-title">Login</h6>
+                    <p class="card-text">
+                        <form method="post" action=".">
+                            {% csrf_token %}
 
-    <p>Not registered? <a href="{% url 'registration_register' %}">Register Here!</a></p>
+                            {{ form.as_p }}
+
+                            <input type="submit" value="Log In">
+                            <input type="hidden" name="next" value="{{ next }}">
+                        </form>
+                    </p>
+
+                    <h6 class="card-title">Not registered?</h6>
+                    <p class="card-text"><a href="{% url 'registration_register' %}">Register Here!</a></p>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-sm">
+        </div>
+    </div>
+
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+	<script src="{% static 'js/popper.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/stellar.js' %}"></script>
+	<script src="{% static 'js/countdown.js' %}"></script>
+	<script src="{% static 'vendors/nice-select/js/jquery.nice-select.min.js' %}"></script>
+	<script src="{% static 'vendors/owl-carousel/owl.carousel.min.js' %}"></script>
+	<script src="{% static 'js/owl-carousel-thumb.min.js' %}"></script>
+	<script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+	<script src="{% static 'vendors/counter-up/jquery.counterup.js' %}"></script>
+	<script src="{% static 'js/mail-script.js' %}"></script>
 </body>
 
 </html>
