--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -66,9 +66,31 @@
             </div>
         </header>
         <!--================ End Header Menu Area =================-->
-    <h1>Logged Out!</h1>
-    <p>You have successfully logged out.</p>
-    <a href="{% url 'main:index' %}">Return to index</a>
+        <div class="container">
+            <div class="col-sm">
+    
+            </div>
+            <div class="col-sm">
+                <div class="card">
+                    <div class="card-header">
+                    </div>
+                    <div class="card-body">
+    
+                        <h6 class="card-title">Logged out</h6>
+                        <p class="card-text">
+                            You have successfull logged out.
+                        </p>
+    
+                        <h6 class="card-title"></h6>
+                        <p class="card-text"><a href="{% url 'main:index' %}">Return to index</a></p>
+                    </div>
+    
+                </div>
+            </div>
+            <div class="col-sm">
+                
+            </div>
+        </div> 
 </body>
 
 </html>
