Edited base template/index

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -88,8 +88,8 @@
 	
 	<!--================ Start Body_Block Area  =================-->
 	<div>
-	{% block body_block%}
-	{endblock%}
+	{% block body_block %}
+	{%endblock%}
 	</div>
 	
 	<!--================ End Body_Block Area  =================-->
