Forgot to add the actual file I edited...

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -24,7 +24,7 @@
 
 <body>
 	<!--================ Start Feature Area =================-->
-	{% block body_block %}
+	<!-- {% block body_block %} -->
 	<section class="feature_area">
 		<div class="container">
 			<div class="row justify-content-end">
