--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -100,7 +100,7 @@
 	<footer class="footer-area section_gap">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-2 col-md-6 single-footer-widget"
+				<div class="col-lg-2 col-md-6 single-footer-widget">
 				
 							<div style="position: absolute; left: -5000px;">
 								<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
