--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -7,8 +7,29 @@
 	Questionable
 	{% endblock %}
 
+		<!--================ Start Home Banner Area =================-->
+		<div>
 
-{% block body_block %}
+			<section class="home_banner_area">
+				<div class="banner_inner">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-6">
+	
+								<div class="banner_content">
+								</div>
+	
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+	
+		</div>
+		<!--================ End Home Banner Area =================-->
+
+	{% block body_block %}
+
 	<!--================ Start Feature Area =================-->
 	<section class="feature_area">
 		<div class="container">
