--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -6,6 +6,8 @@
            Questionable: Password Changed
 {% endblock %}
 {% block body_block%}
+<div class="container">
         <h1>Password changed sucessfully!</h1> 
         <a href="{% url 'main:index' %}">Return to index</a>
+</div>
 {% endblock %}
