--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -6,6 +6,7 @@
            Questionable: Logout
 {% endblock %}
 {% block body_block%}
+<div class="container">
 <br />
     <h1>Change Password</h1>
     <form method="post" action=".">
@@ -18,4 +19,5 @@
     </form>
     <a href="{% url 'main:index' %}" class="btn btn-primary">Return to index</a>
     <br />
+</div>
 {% endblock %}
