--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -6,6 +6,7 @@
            Questionable: Register
 {% endblock %}
 {% block body_block%}
+<div class="container">
 <br />
     <h1>Register</h1>
     <form method="post" action=".">
@@ -18,4 +19,5 @@
     </form>
     <a href="{% url 'main:index' %}">Return to index</a>
     <br />
+</div>
 {% endblock %}
