--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body_block %}
-
+<div class="container">
 <br />
 
 <div class="col-sm-3">
@@ -25,8 +25,6 @@
             <ul class="list-group">
               <a href="{% url 'main:update_user' %}"><li class="list-group-item list-group-item-action list-group-item-info">Update profile</li></a>
               <a href="{% url 'auth_password_change' %}" ><li class="list-group-item list-group-item-action list-group-item-info">Change password</li></a>
-              <a href="{% url 'main:index' %}"><li class="list-group-item list-group-item-action list-group-item-info">Return to index</li></a>
-
             </ul>
             
             
@@ -95,5 +93,5 @@
           </div>
         </div>
       </div>
-
+    </div>
 {% endblock %}
