--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,7 @@
            Questionable: Login
 {% endblock %}
 {% block body_block%}
+<div class="container">
     <div class="col-sm align-items-center">
         <h3>Login</h3> 
         <form method="post" action=".">
@@ -19,4 +20,5 @@
         <a href="{% url 'social:begin' 'twitter' %}"><button type="button" class="btn btn-primary">Login with Twitter</button></a>
         <p>Not registered? <a href="{% url 'registration_register' %}">Register Here!</a></p>
     </div>
+</div>
 {% endblock %}
