--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -3,95 +3,100 @@
 {% load staticfiles %}
 
 {% block title_block %}
-   Questionable: Profile
+Profile
 {% endblock %}
 
 {% block body_block %}
 <div class="container">
-<br />
-
-<div class="col-sm-3">
-        <div class="card" style="width: 18rem;">
-          <img src="../media/{{ user.profile.picture }}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">{{ user.username }}'s Profile</h5>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Username: {{ user.username }}</li>
-              <li class="list-group-item">Email: {{ user.email }}</li>
-            </ul><br />
-            <h6>Biography:</h6>
-            <p class="card-text">{{ user.profile.bio }}</p>
-            <br />
-            <ul class="list-group">
-              <a href="{% url 'main:update_user' %}"><li class="list-group-item list-group-item-action list-group-item-info">Update profile</li></a>
-              <a href="{% url 'auth_password_change' %}" ><li class="list-group-item list-group-item-action list-group-item-info">Change password</li></a>
-            </ul>
-            
-            
-            
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-8">
-
-        <div class="card">
-          <div class="card-header">
-            Recent Questions
-          </div>
-          <div class="card-body">
-            {% if questions %}
-            {% for question in questions %}
-            <h6 class="card-title">{{question.title}}</h6>
-            <p class="card-text">{{ question.question }}</p>
-            {% endfor %}
-            {% else %}
-            <h6 class="card-title">Recent Questions</h6>
-            <p class="card-text">No recent questions to display</p>
-          </div>
-          {% endif %}
-        </div>
+  <br />
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="card" style="width: 18rem;">
+        <img src="../media/{{ user.profile.picture }}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{ user.username }}'s Profile</h5>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Username: {{ user.username }}</li>
+            <li class="list-group-item">Email: {{ user.email }}</li>
+          </ul><br />
+          <h6>Biography:</h6>
+          <p class="card-text">{{ user.profile.bio }}</p>
+          <br />
+          <ul class="list-group">
+            <a href="{% url 'main:update_user' %}">
+              <li class="list-group-item list-group-item-action list-group-item-info">Update profile</li>
+            </a>
+            <a href="{% url 'auth_password_change' %}">
+              <li class="list-group-item list-group-item-action list-group-item-info">Change password</li>
+            </a>
+          </ul>
 
 
 
-
-        <div class="card">
-          <div class="card-header">
-            Recent Posts
-          </div>
-
-          <div class="card-body">
-            {% if posts %}
-            {% for post in posts %}
-            <h6 class="card-title">{{ post.title }}</h6>
-            <p class="card-text">{{ post.post }}</p>
-            {% endfor %}
-            {% else %}
-            <h6 class="card-title">No Posts</h6>
-            <p class="card-text">No recent posts to display</p>
-          </div>
-          {% endif %}
-        </div>
-
-
-
-
-        <div class="card">
-          <div class="card-header">
-            Recent Replies
-          </div>
-          <div class="card-body">
-            {% if replies %}
-            {% for reply in replies %}
-            <h6 class="card-title">{{reply.question.title}}</h6>
-            <p class="card-text">{{ reply.reply }}</p>
-            {% endfor %}
-            {% else %}
-            <h6 class="card-title">Recent Replies</h6>
-            <p class="card-text">No recent replies to display</p>
-            {% endif %}
-          </div>
         </div>
       </div>
     </div>
+
+    <div class="col-sm-8">
+
+      <div class="card">
+        <div class="card-header">
+          Recent Questions
+        </div>
+        <div class="card-body">
+          {% if questions %}
+          {% for question in questions %}
+          <h6 class="card-title">{{question.title}}</h6>
+          <p class="card-text">{{ question.question }}</p>
+          {% endfor %}
+          {% else %}
+          <h6 class="card-title">Recent Questions</h6>
+          <p class="card-text">No recent questions to display</p>
+        </div>
+        {% endif %}
+      </div>
+
+
+
+
+      <div class="card">
+        <div class="card-header">
+          Recent Posts
+        </div>
+
+        <div class="card-body">
+          {% if posts %}
+          {% for post in posts %}
+          <h6 class="card-title">{{ post.title }}</h6>
+          <p class="card-text">{{ post.post }}</p>
+          {% endfor %}
+          {% else %}
+          <h6 class="card-title">No Posts</h6>
+          <p class="card-text">No recent posts to display</p>
+        </div>
+        {% endif %}
+      </div>
+
+
+
+
+      <div class="card">
+        <div class="card-header">
+          Recent Replies
+        </div>
+        <div class="card-body">
+          {% if replies %}
+          {% for reply in replies %}
+          <h6 class="card-title">{{reply.question.title}}</h6>
+          <p class="card-text">{{ reply.reply }}</p>
+          {% endfor %}
+          {% else %}
+          <h6 class="card-title">Recent Replies</h6>
+          <p class="card-text">No recent replies to display</p>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
