--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -7,17 +7,18 @@
 {% endblock %}
 {% block body_block%}
 <div class="container">
-<br />
-    <h1>Change Password</h1>
-    <form method="post" action=".">
-        {% csrf_token %}
-
-        {{ form.as_p }}
-
-        <input type="submit" value="Update Password">
-
-    </form>
-    <a href="{% url 'main:index' %}" class="btn btn-primary">Return to index</a>
-    <br />
+    <div class="card">
+        <div class="card-body">
+            <h3 class="card-title">Change Password</h3>
+            <p class="card-text">
+                <form method="post" action=".">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input class="btn btn-primary" type="submit" value="Update Password">
+                </form>
+            </p>
+            <a href="{% url 'main:profile' %}" class="btn btn-primary">Cancel</a>
+        </div>
+    </div>  
 </div>
 {% endblock %}
