--- a/templates/main/create_lecture.html
+++ b/templates/main/create_lecture.html
@@ -6,9 +6,9 @@
            Questionable: Create Lecture
 {% endblock %}
 
-{% block body_block%}
+{% block body_block %}
     <div>
-        <form id="lectureForm" method="POST" action="{% url 'main:create_lecture course.slug">
+        <form id="lectureForm" method="POST" action="{% url 'main:create_lecture' course.slug %}">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
